--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,12 +1,12 @@
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.name }}{% endif %}</title>
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="{{ site.description }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl }}">
-
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
-
+    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.4.2/pure-min.css">
+    <link rel="stylesheet" href="{{ "/css/pure-skin-scottlinder.css" | prepend: site.basurl" }}">
+    <link rel="stylesheet" href="{{ "/css/syntax.css" | prepend: site.basurl }}">
+    <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.basurl }}">
 </head>
