--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,9 @@
 <div id="footer">
     <ul class="list-horizontal">
         <li>Scott Linder</li>
-        <li>Coder</li>
-        <li><a href="mailto:scott.linder18@gmail.com">
-            scott.linder18@gmail.com</a></li>
-        <li><a href="https://github.com/scott-linder">
-            github.com/scott-linder</a></li>
+        <li>Programmer</li>
+        <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+        <li><a href="https://github.com/scott-linder">github.com/scott-linder</a></li>
     </ul>
     <ul class="list-horizontal">
         <li>Built: {{ site.time }}</li>
