--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,7 @@
     <title>{{ site.title }}{% if page.title %} — {{ page.title }}{% endif %}</title>
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="{{ site.description }}">
+    <link rel="icon" type="image/png" href="{{ "/image/icon.png" | prepend: site.baseurl }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl }}">
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.4.2/pure-min.css">
     <link rel="stylesheet" href="{{ "/css/pure-skin-scottlinder.css" | prepend: site.basurl" }}">
