Remove webfonts and switch to sans-serif

--- a/css/main.css
+++ b/css/main.css
@@ -1,17 +1,13 @@
-@import url(http://fonts.googleapis.com/css?family=Droid+Serif:400,400italic,700,700italic);
-@import url(http://fonts.googleapis.com/css?family=Droid+Sans+Mono);
-
 * {
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
 }
 
-/* ensure font stack is respected everywhere */
 html, button, input, select, textarea,
 .pure-g [class *= "pure-u"],
 .pure-g-r [class *= "pure-u"] {
-    font-family: 'Droid Serif', serif;
+    font-family: sans-serif;
     font-size: 18px;
 }
 
