Add code section

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
         <li>Scott Linder</li>
         <li>Programmer</li>
         <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-        <li><a href="https://github.com/scott-linder">github.com/scott-linder</a></li>
+        <li><a href="{{ site.github.url }}">{{ site.github.name }}</a></li>
     </ul>
     <ul class="list-horizontal">
         <li>Built: {{ site.time }}</li>
