--- a/_includes/fork.html
+++ b/_includes/fork.html
@@ -1,1 +1,1 @@
-<a href="{{ page.title | prepend: site.github.url }}">Fork me on GitHub</a>
+<a href="{{ page.title | prepend: site.github.loc }}">Fork me on GitHub</a>
